# NSC

./: README.md
lib/: NIC_Info.c
source/: CMakeLists.txt  main.cpp
source/inc/: server.h
source/inc/Linux/: client.h  config.h
source/inc/MacOS/: config.h
source/inc/Windows/: config.h
source/src/: client.cpp  server.cpp
